# 4607gmti

./: .gitignore  README.md  pyproject.toml
specifications/schemas/: GMTIGlobals.xsd
src/gmti4607/: cli.py  viz.py
src/gmti4607.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gmti4607/binary/: reader.py  scale.py  writer.py
src/gmti4607/binary/codecs/: __init__.py  bitcursor.py  dwell_codec.py  dwell_mask.py  packet_header.py  segment_header.py  target_codec.py
src/gmti4607/models/: common.py  dwell.py  file.py  file_header.py  target.py
src/gmti4607/specifications/schemas/: DIS2gmti.xsd  FIPS10-4CountryCodes.xsd  gmti.xsd
src/gmti4607/xmlio/: read.py  write.py
tests/: test_imports.py  test_packet_segment_headers.py  test_smoke_binary_xml.py  test_target_codec.py
tools/: compact_probe.py  compact_vs_center.py  dump_first_targets.py  grab_first_dwell.py  inspect_first_dwell_mask.py  peek_first_target_block.py
