[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmti4607"
version = "0.1.0"
description = "Pydantic-first STANAG 4607 GMTI reader/writer and XML converter with minimal viz."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
xml = ["pydantic-xml>=2.8", "xmlschema>=2.5"]
viz = ["matplotlib>=3.7"]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "types-requests",
    "hypothesis>=6.100",
]

[project.urls]
Homepage = "https://github.com/CristianComan/4607gmti"

[project.scripts]
gmti4607 = "gmti4607.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_namespace_packages = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
